@startuml

title __CONTROLLER's Class Diagram__\n

  namespace fr.foundation.modwizard {
    namespace controller {
      class fr.foundation.modwizard.controller.BuildingController {
          + BuildingController()
          + initController()
      }
    }
  }
  

  namespace fr.foundation.modwizard {
    namespace controller {
      abstract class fr.foundation.modwizard.controller.Controller {
          ~ isClose : boolean
          + closeFrame()
          {abstract} + initController()
          + initView()
      }
    }
  }
  

  namespace fr.foundation.modwizard {
    namespace controller {
      class fr.foundation.modwizard.controller.ProjectController {
          + ProjectController()
          + initController()
      }
    }
  }
  

  fr.foundation.modwizard.controller.BuildingController -up-|> fr.foundation.modwizard.controller.Controller
  fr.foundation.modwizard.controller.BuildingController o-- fr.foundation.modwizard.model.Building : building
  fr.foundation.modwizard.controller.BuildingController o-- fr.foundation.modwizard.view.BuildingForm : buildingForm
  fr.foundation.modwizard.controller.ProjectController -up-|> fr.foundation.modwizard.controller.Controller
  fr.foundation.modwizard.controller.ProjectController o-- fr.foundation.modwizard.model.Project : project
  fr.foundation.modwizard.controller.ProjectController o-- fr.foundation.modwizard.view.ProjectForm : projectForm


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
